# OglOclPreview

./: .gitignore
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  OclConversion.cpp  OclConversion.h  log.h  native-lib.cpp  nativeOGLLib.cpp  setEnvLib.cpp
app/src/main/cpp/OCL_Common/: Buffer.cpp  Buffer.h  CMakeLists.txt  Context.cpp  Context.h  Kernel.cpp  Kernel.h  OCL_Init.cpp  OCL_Init.h  Queue.cpp  Queue.h  convert_to_rgb.h  convert_to_rgb_image.h  kernels.h  median_filter.h
app/src/main/cpp/includes/: memory.h
app/src/main/cpp/includes/CL/: cl_version.h
app/src/main/java/com/example/myapplication/: DirectVideo.java  FPSCounter.java  MainActivity.java  MyGL20Renderer.java  MyGLSurfaceView.java  NativeOgl.java
gradle/wrapper/: gradle-wrapper.properties
